kernel: Bring in a port of FreeBSD's virtio_random(4) driver.
Tested-by: Diederik de Groot <info@talon.nl>

--- a/share/man/man4/virtio.4
+++ b/share/man/man4/virtio.4
@@ -24,7 +24,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/virtio.4 273515 2014-10-23 04:47:32Z bryanv $
 .\"
-.Dd July 30, 2017
+.Dd September 30, 2018
 .Dt VIRTIO 4
 .Os
 .Sh NAME
@@ -94,6 +94,7 @@ The default value is 0 (use MSI-X interrupts if available).
 .\".Xr virtio_balloon 4 ,
 .Xr virtio_blk 4 ,
 .\".Xr virtio_console 4 ,
+.Xr virtio_random 4 ,
 .Xr virtio_scsi 4 ,
 .Xr vtnet 4
 .Sh HISTORY
