--- a/share/man/man9/sysctl_add_oid.9
+++ b/share/man/man9/sysctl_add_oid.9
@@ -27,7 +27,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man9/sysctl_add_oid.9,v 1.21 2006/04/28 10:45:27 rwatson Exp $
 .\"
-.Dd July 21, 2018
+.Dd October 6, 2018
 .Dt SYSCTL_ADD_OID 9
 .Os
 .Sh NAME
@@ -102,6 +102,50 @@
 .Fa "const char *descr"
 .Fc
 .Ft struct sysctl_oid *
+.Fo SYSCTL_ADD_S8
+.Fa "struct sysctl_ctx_list *ctx"
+.Fa "struct sysctl_oid_list *parent"
+.Fa "int number"
+.Fa "const char *name"
+.Fa "int access"
+.Fa "int8_t *arg"
+.Fa "int len"
+.Fa "const char *descr"
+.Fc
+.Ft struct sysctl_oid *
+.Fo SYSCTL_ADD_S16
+.Fa "struct sysctl_ctx_list *ctx"
+.Fa "struct sysctl_oid_list *parent"
+.Fa "int number"
+.Fa "const char *name"
+.Fa "int access"
+.Fa "int16_t *arg"
+.Fa "int len"
+.Fa "const char *descr"
+.Fc
+.Ft struct sysctl_oid *
+.Fo SYSCTL_ADD_S32
+.Fa "struct sysctl_ctx_list *ctx"
+.Fa "struct sysctl_oid_list *parent"
+.Fa "int number"
+.Fa "const char *name"
+.Fa "int access"
+.Fa "int32_t *arg"
+.Fa "int len"
+.Fa "const char *descr"
+.Fc
+.Ft struct sysctl_oid *
+.Fo SYSCTL_ADD_S64
+.Fa "struct sysctl_ctx_list *ctx"
+.Fa "struct sysctl_oid_list *parent"
+.Fa "int number"
+.Fa "const char *name"
+.Fa "int access"
+.Fa "int64_t *arg"
+.Fa "int len"
+.Fa "const char *descr"
+.Fc
+.Ft struct sysctl_oid *
 .Fo SYSCTL_ADD_STRING
 .Fa "struct sysctl_ctx_list *ctx"
 .Fa "struct sysctl_oid_list *parent"
@@ -124,6 +168,28 @@
 .Fa "const char *descr"
 .Fc
 .Ft struct sysctl_oid *
+.Fo SYSCTL_ADD_U8
+.Fa "struct sysctl_ctx_list *ctx"
+.Fa "struct sysctl_oid_list *parent"
+.Fa "int number"
+.Fa "const char *name"
+.Fa "int access"
+.Fa "uint8_t *arg"
+.Fa "int len"
+.Fa "const char *descr"
+.Fc
+.Ft struct sysctl_oid *
+.Fo SYSCTL_ADD_U16
+.Fa "struct sysctl_ctx_list *ctx"
+.Fa "struct sysctl_oid_list *parent"
+.Fa "int number"
+.Fa "const char *name"
+.Fa "int access"
+.Fa "uint16_t *arg"
+.Fa "int len"
+.Fa "const char *descr"
+.Fc
+.Ft struct sysctl_oid *
 .Fo SYSCTL_ADD_U32
 .Fa "struct sysctl_ctx_list *ctx"
 .Fa "struct sysctl_oid_list *parent"
@@ -131,6 +197,17 @@
 .Fa "const char *name"
 .Fa "int access"
 .Fa "uint32_t *arg"
+.Fa "const char *descr"
+.Fc
+.Ft struct sysctl_oid *
+.Fo SYSCTL_ADD_U64
+.Fa "struct sysctl_ctx_list *ctx"
+.Fa "struct sysctl_oid_list *parent"
+.Fa "int number"
+.Fa "const char *name"
+.Fa "int access"
+.Fa "uint64_t *arg"
+.Fa "int len"
 .Fa "const char *descr"
 .Fc
 .Ft struct sysctl_oid *
@@ -447,15 +524,43 @@ function.
 creates an oid of type
 .Dv CTLTYPE_NODE ,
 to which child oids may be added.
+.It Fn SYSCTL_ADD_S8
+creates an oid that handles an
+.Li int8_t
+variable.
+.It Fn SYSCTL_ADD_S16
+creates an oid that handles an
+.Li int16_t
+variable.
+.It Fn SYSCTL_ADD_S32
+creates an oid that handles an
+.Li int16_t
+variable.
+.It Fn SYSCTL_ADD_S64
+creates an oid that handles an
+.Li int64_t
+variable.
 .It Fn SYSCTL_ADD_STRING
 creates an oid that handles a zero-terminated character string.
 .It Fn SYSCTL_ADD_INT
 creates an oid that handles an
 .Li int
 variable.
+.It Fn SYSCTL_ADD_U8
+creates an oid that handles a
+.Li uint8_t
+variable.
+.It Fn SYSCTL_ADD_U16
+creates an oid that handles a
+.Li uint16_t
+variable.
 .It Fn SYSCTL_ADD_U32
 creates an oid that handles a
 .Li uint32_t
+variable.
+.It Fn SYSCTL_ADD_U64
+creates an oid that handles a
+.Li uint64_t
 variable.
 .It Fn SYSCTL_ADD_UINT
 creates an oid that handles an
