kernel/libc: Remove sigstack() remains.
There is no sigstack() syscall anymore in DragonFly, besides being
obsolete, so remove some remains like the manual page and prototype,
and do some related cleanup.

--- a/lib/libc/sys/sigaltstack.2
+++ b/lib/libc/sys/sigaltstack.2
@@ -165,6 +165,6 @@ An attempt was made to modify an active stack.
 The predecessor to
 .Fn sigaltstack ,
 the
-.Fn sigstack
+.Nm sigstack
 system call, appeared in
 .Bx 4.2 .
