libc - Add kpmap shortcut for gettimeofday()
* If the kern.gettimeofday_quick sysctl is set to 1, libc's
  gettimeofday() will use the tick-granular realtime in
  the kpmap instead of making a system call.  The sysctl
  defaults to 0 (off).

* Useful in situations where gettimeofday() interferes with
  benchmarks, but otherwise not recommended.

* Running programs react instantly to changes in this sysctl.

--- a/share/man/man4/upmap.4
+++ b/share/man/man4/upmap.4
@@ -144,6 +144,12 @@ The tick resolution of
 and
 .Fa ts_realtime
 and approximate tick resolution for the scheduler, typically 100.
+.It Va fast_gtod
+This integer reflects the state of the "kern.gettimeofday_quick"
+sysctl.  When set to 1, gettimeofday(&tv, NULL) calls will access
+the tick-resolution ts_realtime[] fields instead of executing the
+system call.  Changes in the sysctl are immediately reflected in
+programs that are already running.
 .El
 .Sh NOTES
 With
