--- a/usr.sbin/acpi/acpiexec/acpiexec.8
+++ b/usr.sbin/acpi/acpiexec/acpiexec.8
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd June 2, 2018
+.Dd November 1, 2018
 .Dt ACPIEXEC 8
 .Os
 .Sh NAME
@@ -52,7 +52,8 @@ Disable execution of STA/INI methods during init.
 .It Fl do
 Disable Operation Region address simulation.
 .It Fl dp
-Disable TermList parsing for scope objects.
+Disable loading DSDT/SSDT as a control method
+(enable legacy grouping of module-level code).
 .It Fl dr
 Disable repair of method return values.
 .It Fl ds
@@ -67,8 +68,6 @@ Enable display of final memory statistics.
 Enable additional tests for ACPICA interfaces.
 .It Fl el
 Enable loading of additional test tables.
-.It Fl em
-Enable (legacy) grouping of module-level code.
 .It Fl es
 Enable Interpreter Slack Mode.
 .It Fl et
