--- a/sbin/mkinitrd/mkinitrd.8
+++ b/sbin/mkinitrd/mkinitrd.8
@@ -28,7 +28,7 @@
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd March 3, 2015
+.Dd November 7, 2018
 .Dt MKINITRD 8
 .Os
 .Sh NAME
@@ -78,8 +78,7 @@ The
 script will read
 .Pa /etc/mkinitrd.conf
 if it exists and use the configuration from this file to override the
-following variables (defaults are in
-.Pa /etc/defaults/mkinitrd.conf ) :
+following variables:
 .Bd -literal -offset indent
 BUILD_DIR
 INITRD_SIZE
