Add "device uether" to various manual pages' synopses.
It is needed to be compiled in.

Reported-by: aly

--- a/share/man/man4/ipheth.4
+++ b/share/man/man4/ipheth.4
@@ -27,7 +27,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/ipheth.4 272294 2014-09-30 05:36:16Z gavin $
 .\"
-.Dd February 22, 2018
+.Dd November 16, 2018
 .Dt IPHETH 4
 .Os
 .Sh NAME
@@ -47,6 +47,7 @@ following lines in your kernel configuration file:
 .Cd "device uhci"
 .Cd "device ohci"
 .Cd "device usb"
+.Cd "device uether"
 .Cd "device ipheth"
 .Ed
 .Sh DESCRIPTION
