--- a/share/man/man4/urndis.4
+++ b/share/man/man4/urndis.4
@@ -29,7 +29,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/urndis.4 264731 2014-04-21 16:35:19Z gjb $
 .\"
-.Dd February 22, 2018
+.Dd November 16, 2018
 .Dt URNDIS 4
 .Os
 .Sh NAME
@@ -45,6 +45,7 @@ kernel configuration file:
 .Cd "device ohci"
 .Cd "device xhci"
 .Cd "device usb"
+.Cd "device uether"
 .Cd "device urndis"
 .Ed
 .Pp
