--- a/share/man/man4/axe.4
+++ b/share/man/man4/axe.4
@@ -30,7 +30,7 @@
 .\"
 .\" $FreeBSD: head/share/man/man4/axe.4 252186 2013-06-25 00:29:13Z yongari $
 .\"
-.Dd March 13, 2014
+.Dd November 16, 2018
 .Dt AXE 4
 .Os
 .Sh NAME
@@ -46,6 +46,7 @@ kernel configuration file:
 .Cd "device ohci"
 .Cd "device usb"
 .Cd "device miibus"
+.Cd "device uether"
 .Cd "device axe"
 .Ed
 .Pp
